--- a/DisplayMode/AndroidManifest.xml
+++ b/DisplayMode/AndroidManifest.xml
@@ -40,7 +40,7 @@
                 android:resource="@drawable/ic_panel_tile" />
             <meta-data
                 android:name="com.android.settings.category"
-                android:value="com.android.settings.category.ia.homepage" />
+                android:value="com.android.settings.category.ia.display" />
             <meta-data android:name="com.android.settings.summary"
                 android:resource="@string/display_summary" />
         </activity>
@@ -53,7 +53,7 @@
             android:label="@string/panel_category_title"
             android:launchMode="singleTask" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="com.aicp.settings.device.DISPLAYMODE_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
