--- a/DisplayMode/AndroidManifest.xml
+++ b/DisplayMode/AndroidManifest.xml
@@ -53,7 +53,7 @@
             android:label="@string/panel_category_title"
             android:launchMode="singleTask" >
             <intent-filter>
-                <action android:name="com.aicp.settings.device.DISPLAYMODE_SETTINGS" />
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
