--- a/Doze/AndroidManifest.xml
+++ b/Doze/AndroidManifest.xml
@@ -53,7 +53,11 @@
                 <action android:name="com.aicp.settings.device.DOZE_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.display" />
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/ambient_display_summary"/>
         </activity>
-
     </application>
 </manifest>
