op-common: cosmetics on the Androidmanifest.xml

--- a/DeviceHandler/AndroidManifest.xml
+++ b/DeviceHandler/AndroidManifest.xml
@@ -25,6 +25,7 @@
             android:name=".settings.ScreenOffGestureSettings"
             android:label="@string/screen_off_gesture_title"
             android:theme="@style/DeviceHandlerTheme">
+
           <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
           </intent-filter>
@@ -32,13 +33,14 @@
                 android:name="com.android.settings.category"
                 android:value="com.android.settings.category.ia.gestures" />
           <meta-data android:name="com.android.settings.summary"
-              android:resource="@string/screen_off_gesture_summary"/>
+              android:resource="@string/screen_off_gesture_summary" />
         </activity>
 
         <activity
             android:name=".settings.SliderSettings"
-            android:theme="@style/DeviceHandlerTheme"
-            android:label="@string/notification_slider">
+            android:label="@string/notification_slider"
+            android:theme="@style/DeviceHandlerTheme">
+
             <intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
             </intent-filter>
@@ -49,7 +51,7 @@
                 android:name="com.android.settings.category"
                 android:value="com.android.settings.category.ia.system" />
             <meta-data android:name="com.android.settings.summary"
-                android:resource="@string/notification_slider_summary"/>
+                android:resource="@string/notification_slider_summary" />
         </activity>
 
         <receiver android:name=".BootReceiver" >
